--- a/requirements.txt
+++ b/requirements.txt
@@ -4,24 +4,26 @@ twine==4.0.2        # pip package uploader
 keyring==24.2.0     # authenticator (used by twine)
 
 # Zrb dependencies (should be copied to `pyproject.toml`)
-click==8.1.4        # CLI framework
-aiofiles==23.1.0
-typeguard==2.13.3
-termcolor==2.3.0
-Jinja2==3.1.2
-libcst==0.4.9
-python-dotenv==1.0.0
-jsons==1.6.3
-ruamel.yaml==0.17.32
-setuptools==68.0.0
-autopep8==2.0.2     # Autoformatter
-tomli==2.0.1
+click~=8.1.4        # CLI framework
+aiofiles~=23.1.0
+typeguard~=2.13.3
+termcolor~=2.3.0
+Jinja2~=3.1.2
+libcst~=0.4.9
+python-dotenv~=1.0.0
+jsons~=1.6.3
+ruamel.yaml~=0.17.32
+setuptools~=68.0.0
+autopep8~=2.0.2     # Autoformatter
+tomli~=2.0.1
 
 # Zrb dev dependencies (should be copied to `pyproject.toml`)
-flake8==6.0.0       # Linter
-pytest==7.4.0
-pytest-cov==4.1.0
-pytest-asyncio==0.21.0
+flake8~=6.0.0       # Linter
+
+# Zrb test dependencies (should be copied to `pyproject.toml`)
+pytest~=7.4.0
+pytest-cov~=4.1.0
+pytest-asyncio~=0.21.0
 
 # Other dependencies (just for auto-completion, not included in `pyproject.toml`)
 pulumi==3.78.1
