--- a/src/zrb/builtin/generator/docker_compose_task/template/src/kebab-zrb-task-name/docker-compose.yml
+++ b/src/zrb/builtin/generator/docker_compose_task/template/src/kebab-zrb-task-name/docker-compose.yml
@@ -11,7 +11,8 @@ networks:
     name: zrb
 
 services:
-  myapp:
+
+  kebab-zrb-task-name:
     build: image
     image: ${IMAGE:-kebab-zrb-task-name}
     logging: *default-logging
