--- a/src/zrb/builtin/generator/app_generator/template/build-custom-image/_automate/generate_snake_zrb_meta_template_name/template/src/kebab-zrb-app-name/src/Dockerfile
+++ b/src/zrb/builtin/generator/app_generator/template/build-custom-image/_automate/generate_snake_zrb_meta_template_name/template/src/kebab-zrb-app-name/src/Dockerfile
@@ -4,7 +4,7 @@ COPY . .
 RUN go build -o web-server main.go
 
 
-FROM zrbMetaTemplateBaseImage
+FROM zrbMetaBaseImage
 ENV APP_MESSAGE "Hello, world!"
 ENV APP_PORT 8080
 WORKDIR /app
