--- a/pyproject.toml
+++ b/pyproject.toml
@@ -4,7 +4,7 @@ build-backend = "flit_core.buildapi"
 
 [project]
 name = "zrb"
-version = "0.0.95"
+version = "0.0.96"
 authors = [
   { name="Go Frendi Gunawan", email="gofrendiasgard@gmail.com" },
 ]
@@ -19,7 +19,7 @@ classifiers = [
 dependencies = [
   "click ~= 8.1.4",
   "aiofiles ~= 23.1.0",
-  "typeguard ~= 2.13.3",
+  "beartype ~= 0.15.0",
   "termcolor ~= 2.3.0",
   "Jinja2 ~= 3.1.2",
   "libcst ~= 0.4.9",
