update helix config

--- a/src/zrb/builtin/devtool/helix/resource/config.toml
+++ b/src/zrb/builtin/devtool/helix/resource/config.toml
@@ -11,3 +11,9 @@ select = "underline"
 
 [editor.soft-wrap]
 enable = true
+
+[editor.file-picker]
+hidden = false
+git-ignore = false
+git-global = false
+git-exclude = false
