--- a/src/zrb/builtin/generator/app_generator/template/base/_automate/generate_snake_zrb_meta_template_name/template/src/kebab-zrb-app-name/docker-compose.yml
+++ b/src/zrb/builtin/generator/app_generator/template/base/_automate/generate_snake_zrb_meta_template_name/template/src/kebab-zrb-app-name/docker-compose.yml
@@ -13,10 +13,13 @@ networks:
 services:
 
   kebab-zrb-app-name:
-    image: zrbMetaBaseImage
+    image: ${IMAGE:-zrbMetaBaseImage}
     logging: *default-logging
     container_name: ${CONTAINER_PREFIX:-my}-kebab-zrb-app-name
     hostname: kebab-zrb-app-name
+    environment:
+    - APP_PORT=${APP_PORT:-8080}
+    - APP_MESSAGE=${APP_MESSAGE}
     ports:
     - "${HOST_PORT:-8080}:${APP_PORT:-8080}"
     restart: unless-stopped
