--- a/src/zrb/builtin/devtool/helix/resource/config.toml
+++ b/src/zrb/builtin/devtool/helix/resource/config.toml
@@ -8,3 +8,12 @@ mouse = true
 insert = "bar"
 normal = "block"
 select = "underline"
+
+[editor.soft-wrap]
+enable = true
+
+[editor.file-picker]
+hidden = false
+git-ignore = false
+git-global = false
+git-exclude = false
