remove dependency to ResourceMaker

--- a/docker/Dockerfile
+++ b/docker/Dockerfile
@@ -4,5 +4,8 @@ FROM python:3.10-bookworm
 RUN mkdir -p /project
 WORKDIR /project
 
+# Define arguments
+ARG ZRB_VERSION=latest
+
 # Install zrb
-RUN pip install zrb==ZRB_VERSION
+RUN pip install zrb==${ZRB_VERSION}
