--- a/pyproject.toml
+++ b/pyproject.toml
@@ -28,6 +28,7 @@ dependencies = [
   "ruamel.yaml ~= 0.17.32",
   "setuptools ~= 68.0.0",
   "autopep8 ~= 2.0.2",
+  "croniter ~= 2.0.1",
 ]
 
 [project.optional-dependencies]
