--- a/requirements.txt
+++ b/requirements.txt
@@ -2,6 +2,7 @@
 flit==3.9.0         # better builder
 twine==4.0.2        # pip package uploader
 keyring==24.2.0     # authenticator (used by twine)
+tomli~=2.0.1
 
 # Zrb dependencies (should be copied to `pyproject.toml`)
 click~=8.1.4        # CLI framework
@@ -15,7 +16,7 @@ jsons~=1.6.3
 ruamel.yaml~=0.17.32
 setuptools~=68.0.0
 autopep8~=2.0.2     # Autoformatter
-tomli~=2.0.1
+croniter~=2.0.1
 
 # Zrb dev dependencies (should be copied to `pyproject.toml`)
 flake8~=6.0.0       # Linter
