--- a/pyproject.toml
+++ b/pyproject.toml
@@ -8,7 +8,7 @@ version = "0.0.119"
 authors = [
   { name="Go Frendi Gunawan", email="gofrendiasgard@gmail.com" },
 ]
-description = "Super framework for your super app"
+description = "A Framework to Enhance Your Workflow"
 readme = "README.md"
 requires-python = ">=3.10.0"
 classifiers = [
