--- a/src/zrb/builtin/generator/fastapp/template/src/kebab-zrb-app-name/docker-compose.yml
+++ b/src/zrb/builtin/generator/fastapp/template/src/kebab-zrb-app-name/docker-compose.yml
@@ -345,7 +345,7 @@ services:
     - monolith
     healthcheck:
       test: ["CMD-SHELL", "curl --fail http://localhost:${APP_PORT:-8080}/readiness || exit 1"]
-      interval: 5s
+      interval: 20s
       timeout: 3s
       retries: 10
     networks:
@@ -381,10 +381,13 @@ services:
     profiles:
     - microservices
     healthcheck:
-      test: ["CMD-SHELL", "curl --fail http://localhost:${APP_GATEWAY_PORT:-8080}/readiness || exit 1"]
-      interval: 5s
+      test: 
+        - CMD-SHELL
+        - curl --fail http://localhost:${APP_GATEWAY_PORT:-8080}/readiness || killall uvicorn
+      interval: 20s
       timeout: 3s
       retries: 10
+      start_period: 20s
     networks:
     - zrb
 
@@ -416,10 +419,11 @@ services:
     healthcheck:
       test:
       - CMD-SHELL
-      - curl --fail http://localhost:${APP_AUTH_MODULE_PORT:-8081}/readiness || exit 1
-      interval: 5s
+      - curl --fail http://localhost:${APP_AUTH_MODULE_PORT:-8081}/readiness || killall uvicorn
+      interval: 20s
       timeout: 3s
       retries: 10
+      start_period: 20s
     networks:
     - zrb
 
@@ -451,9 +455,10 @@ services:
     healthcheck:
       test:
       - CMD-SHELL
-      - curl --fail http://localhost:${APP_LOG_MODULE_PORT:-8082}/readiness || exit 1
-      interval: 5s
+      - curl --fail http://localhost:${APP_LOG_MODULE_PORT:-8082}/readiness || killall uvicorn
+      interval: 20s
       timeout: 3s
       retries: 10
+      start_period: 20s
     networks:
     - zrb
