--- a/pyproject.toml
+++ b/pyproject.toml
@@ -26,6 +26,7 @@ dependencies = [
   "python-dotenv ~= 1.0.0",
   "jsons ~= 1.6.3",
   "ruamel.yaml ~= 0.17.32",
+  "tomli ~= 2.0.1",
   "setuptools ~= 68.0.0",
   "autopep8 ~= 2.0.2",
   "croniter ~= 2.0.1",
