--- a/requirements.txt
+++ b/requirements.txt
@@ -14,6 +14,7 @@ libcst~=0.4.9
 python-dotenv~=1.0.0
 jsons~=1.6.3
 ruamel.yaml~=0.17.32
+tomli~=2.0.1
 setuptools~=68.0.0
 autopep8~=2.0.2     # Autoformatter
 croniter~=2.0.1
