--- a/src/zrb/builtin/generator/docker_compose_task/template/src/kebab-zrb-task-name/image/pyproject.toml
+++ b/src/zrb/builtin/generator/docker_compose_task/template/src/kebab-zrb-task-name/image/pyproject.toml
@@ -1,18 +1,10 @@
 [tool.poetry]
 name = "kebab-zrb-package-name"
 version = "0.0.1"
-description = "zrbPackageDescription"
-authors = ["zrbPackageAuthorName <zrbPackageAuthorEmail>"]
-license = "AGPL-3.0-or-later"
-readme = "README.md"
-homepage = "zrbPackageHomepage"
-repository = "zrbPackageRepository"
-documentation = "zrbPackageDocumentation"
-keywords = []
 
 [tool.poetry.dependencies]
 python = ">=3.10.0,<4.0.0"
-zrb = ">=zrbVersion"
+uvicorn = "==0.20.0"
 
 [tool.poetry.dev-dependencies]
 flake8 = "~6.0.0"
@@ -22,9 +14,6 @@ pytest = "~7.4.0"
 pytest-cov = "~4.1.0"
 pytest-asyncio = "~0.21.0"
 flameprof = "~0.4"
-
-[tool.poetry.scripts]
-kebab-zrb-package-name = "snake_zrb_package_name.__main__:hello"
 
 [build-system]
 requires = ["poetry-core>=1.0.0"]
