--- a/src/zrb/builtin/generator/fastapp/template/src/kebab-zrb-app-name/src/Dockerfile
+++ b/src/zrb/builtin/generator/fastapp/template/src/kebab-zrb-app-name/src/Dockerfile
@@ -12,6 +12,7 @@ WORKDIR /home
 RUN apt update && apt install curl psmisc -y
 RUN pip install -U pip
 RUN pip install "poetry==1.7.1"
+COPY ./pyproject.toml ./pyproject.toml
 RUN poetry install --only main
 COPY . .
 COPY --from=frontend-builder /frontend/build /home/frontend/build
