--- a/src/zrb/builtin/generator/docker_compose_task/template/src/kebab-zrb-task-name/image/pyproject.toml
+++ b/src/zrb/builtin/generator/docker_compose_task/template/src/kebab-zrb-task-name/image/pyproject.toml
@@ -1,6 +1,8 @@
 [tool.poetry]
-name = "kebab-zrb-package-name"
+name = "kebab-zrb-task-name"
 version = "0.0.1"
+description = "A docker compose task"
+authors = ["zrb"]
 
 [tool.poetry.dependencies]
 python = ">=3.10.0,<4.0.0"
