--- a/src/zrb/builtin/generator/project/template/pyproject.toml
+++ b/src/zrb/builtin/generator/project/template/pyproject.toml
@@ -1,7 +1,8 @@
 [tool.poetry]
 name = "kebab-zrb-project-name"
 version = "0.0.1"
-description = "A Zrb Project"
+description = "zrbProjectDescription"
+authors = ["zrbProjectAuthorName <zrbProjectAuthorEmail>"]
 keywords = []
 
 [tool.poetry.dependencies]
