--- a/src/zrb/builtin/generator/simple_python_app/template/src/kebab-zrb-app-name/src/Dockerfile
+++ b/src/zrb/builtin/generator/simple_python_app/template/src/kebab-zrb-app-name/src/Dockerfile
@@ -2,7 +2,8 @@ FROM python:3.10-slim
 ENV APP_MESSAGE "Hello, world!"
 ENV APP_PORT 8080
 WORKDIR /home
-COPY . .
+COPY ./pyproject.toml ./pyproject.toml
 RUN pip install "poetry==1.7.1"
 RUN poetry install --only main
+COPY . .
 CMD uvicorn main:app --host "0.0.0.0" --port "$APP_PORT"
