--- a/src/zrb/builtin/generator/simple_python_app/template/src/kebab-zrb-app-name/src/pyproject.toml
+++ b/src/zrb/builtin/generator/simple_python_app/template/src/kebab-zrb-app-name/src/pyproject.toml
@@ -1,6 +1,8 @@
 [tool.poetry]
-name = "kebab-zrb-package-name"
+name = "kebab-zrb-app-name"
 version = "0.0.1"
+description = "zrbAppDescription"
+authors = ["zrbAppAuthorName <zrbAppAuthorEmail>"]
 
 [tool.poetry.dependencies]
 python = ">=3.10.0,<4.0.0"
