--- a/src/zrb/builtin/generator/docker_compose_task/template/src/kebab-zrb-task-name/image/Dockerfile
+++ b/src/zrb/builtin/generator/docker_compose_task/template/src/kebab-zrb-task-name/image/Dockerfile
@@ -4,6 +4,6 @@ ENV APP_PORT 8080
 WORKDIR /home
 COPY ./pyproject.toml ./pyproject.toml
 RUN pip install "poetry==1.7.1"
-RUN poetry install --only main
+RUN poetry install --only main --no-root
 COPY . .
-CMD uvicorn main:app --host "0.0.0.0" --port "$APP_PORT"
+CMD poetry run uvicorn main:app --host "0.0.0.0" --port "$APP_PORT"
