introduce package key on poetry config

--- a/src/zrb/builtin/generator/project/template/pyproject.toml
+++ b/src/zrb/builtin/generator/project/template/pyproject.toml
@@ -4,6 +4,9 @@ version = "0.0.1"
 description = "zrbProjectDescription"
 authors = ["zrbProjectAuthorName <zrbProjectAuthorEmail>"]
 keywords = []
+packages = [
+  {include = "kebab-zrb-project-name", from = ".."},
+]
 
 [tool.poetry.dependencies]
 python = ">=3.10.0,<4.0.0"
