--- a/src/zrb/builtin/generator/fastapp/template/src/kebab-zrb-app-name/src/pyproject.toml
+++ b/src/zrb/builtin/generator/fastapp/template/src/kebab-zrb-app-name/src/pyproject.toml
@@ -3,6 +3,9 @@ name = "kebab-zrb-app-name"
 version = "0.0.1"
 description = "zrbAppDescription"
 authors = ["zrbAppAuthorName <zrbAppAuthorEmail>"]
+packages = [
+  {include = "kebab-zrb-app-name", from = "../.."},
+]
 
 [tool.poetry.dependencies]
 python = ">=3.10.0,<4.0.0"
