--- a/src/zrb/builtin/generator/fastapp/template/src/kebab-zrb-app-name/src/Dockerfile
+++ b/src/zrb/builtin/generator/fastapp/template/src/kebab-zrb-app-name/src/Dockerfile
@@ -9,9 +9,11 @@ FROM python:3.10-slim
 ENV APP_HOST 0.0.0.0
 ENV APP_PORT 8080
 WORKDIR /home
-COPY requirements.txt .
 RUN apt update && apt install curl psmisc -y
-RUN pip install -r requirements.txt
+RUN pip install -U pip
+RUN pip install "poetry==1.7.1"
+COPY ./pyproject.toml ./pyproject.toml
+RUN poetry install --only main --no-root
 COPY . .
 COPY --from=frontend-builder /frontend/build /home/frontend/build
 CMD ./start.sh
