--- a/src/zrb/builtin/generator/docker_compose_task/template/src/kebab-zrb-task-name/image/Dockerfile
+++ b/src/zrb/builtin/generator/docker_compose_task/template/src/kebab-zrb-task-name/image/Dockerfile
@@ -2,6 +2,8 @@ FROM python:3.10-slim
 ENV APP_MESSAGE "Hello, world!"
 ENV APP_PORT 8080
 WORKDIR /home
+COPY ./pyproject.toml ./pyproject.toml
+RUN pip install "poetry==1.7.1"
+RUN poetry install --only main --no-root
 COPY . .
-RUN pip install -r requirements.txt
-CMD uvicorn main:app --host "0.0.0.0" --port "$APP_PORT"
+CMD poetry run uvicorn main:app --host "0.0.0.0" --port "$APP_PORT"
