--- a/src/zrb/builtin/generator/project/template/pyproject.toml
+++ b/src/zrb/builtin/generator/project/template/pyproject.toml
@@ -13,6 +13,9 @@ python = ">=3.10.0,<4.0.0"
 zrb = ">=zrbVersion"
 
 [tool.poetry.dev-dependencies]
+flake8 = "~7.0.0"
+black = "~24.2.0"
+isort = "~5.13.2"
 
 [tool.poetry.scripts]
 
