--- a/src/zrb/builtin/project/add/app/generator/template/src/kebab-zrb-package-name/src/snake_zrb_generator_name/template/src/kebab-zrb-app-name/src/Dockerfile
+++ b/src/zrb/builtin/project/add/app/generator/template/src/kebab-zrb-package-name/src/snake_zrb_generator_name/template/src/kebab-zrb-app-name/src/Dockerfile
@@ -1,6 +1,6 @@
-FROM python:3.10-slim
+FROM zrbGeneratorBaseImage
 ENV APP_MESSAGE "Hello, world!"
-ENV APP_PORT 8080
+ENV APP_PORT zrbAppHttpPort
 ENV POETRY_VIRTUAL_ENVS_CREATE=false
 WORKDIR /home
 COPY ./pyproject.toml ./pyproject.toml
