better config.toml for helix

--- a/src/zrb/builtin/devtool/install/helix/resource/config.toml
+++ b/src/zrb/builtin/devtool/install/helix/resource/config.toml
@@ -3,6 +3,7 @@ theme = "gruvbox_transparent"
 [editor]
 line-number = "relative"
 mouse = true
+bufferline = "always"
 
 [editor.cursor-shape]
 insert = "bar"
