Add connection pool setting

--- a/src/zrb/builtin/project/add/fastapp/app/template/src/kebab-zrb-app-name/src/template.env
+++ b/src/zrb/builtin/project/add/fastapp/app/template/src/kebab-zrb-app-name/src/template.env
@@ -36,6 +36,9 @@ APP_AUTH_GUEST_PHONE=
 APP_DB_CONNECTION=postgresql+psycopg2://postgres:admin@localhost:5432/snake_zrb_app_name
 APP_DB_ENGINE_SHOW_LOG=false
 APP_DB_AUTO_MIGRATE=true
+APP_DB_POOL_PRE_PING=true
+APP_DB_POOL_SIZE=20
+APP_DB_POOL_MAX_OVERFLOW=0
 
 APP_BROKER_TYPE=rabbitmq
 
