fix compose profile

--- a/src/zrb/builtin/project/add/fastapp/app/template/src/kebab-zrb-app-name/docker-compose.yml
+++ b/src/zrb/builtin/project/add/fastapp/app/template/src/kebab-zrb-app-name/docker-compose.yml
@@ -112,6 +112,8 @@ services:
     container_name: ${CONTAINER_PREFIX:-my}-kebab-zrb-app-name-postgresql
     hostname: postgresql
     restart: unless-stopped
+    profiles:
+    - postgres
     environment:
       POSTGRES_USER: ${POSTGRES_USER:-postgres}
       POSTGRES_PASSWORD: ${POSTGRES_PASSWORD:-admin}
