--- a/pyproject.toml
+++ b/pyproject.toml
@@ -44,6 +44,7 @@ jsons = "~1.6.3"
 autopep8 = "~2.0.4"
 croniter = "~2.0.2"
 tomlkit = "^0.12.4"
+requests = "^2.32.3"
 
 [tool.poetry.dev-dependencies]
 flake8 = "~7.0.0"
