--- a/pyproject.toml
+++ b/pyproject.toml
@@ -40,18 +40,19 @@ exclude = [
 [tool.poetry.dependencies]
 python = ">=3.10.0,<4.0.0"
 python-dotenv = "~1.0.1"
-autopep8 = "~2.0.4"
-tomlkit = "^0.12.4"
+autopep8 = "~2.3.1"
 requests = "^2.32.3"
 
 [tool.poetry.dev-dependencies]
-flake8 = "~7.0.0"
-black = "~24.4.2"
+flake8 = "~7.1.1"
+black = "~24.10.0"
 isort = "~5.13.2"
-pytest = "~7.4.0"
-pytest-cov = "~4.1.0"
-pytest-asyncio = "~0.21.0"
-flameprof = "~0.4"
+pytest = "~8.3.3"
+pytest-cov = "~6.0.0"
+pytest-asyncio = "~0.24.0"
+
+[tool.pytest.ini_options]
+asyncio_default_fixture_loop_scope = "function"
 
 [tool.poetry.scripts]
 zrb = "zrb.__main__:serve_cli"
