--- a/pyproject.toml
+++ b/pyproject.toml
@@ -39,9 +39,10 @@ exclude = [
 
 [tool.poetry.dependencies]
 python = ">=3.10.0,<4.0.0"
-python-dotenv = "~1.0.1"
-autopep8 = "~2.3.1"
+python-dotenv = "^1.0.1"
+autopep8 = "^2.3.1"
 requests = "^2.32.3"
+libcst = "^1.5.0"
 
 [tool.poetry.dev-dependencies]
 flake8 = "~7.1.1"
