--- a/pyproject.toml
+++ b/pyproject.toml
@@ -41,13 +41,14 @@ exclude = [
 python = ">=3.10.0,<4.0.0"
 python-dotenv = "^1.0.1"
 autopep8 = "^2.3.1"
+black = "~24.10.0"
+isort = "~5.13.2"
 requests = "^2.32.3"
 libcst = "^1.5.0"
+litellm = "^1.52.12"
 
 [tool.poetry.dev-dependencies]
 flake8 = "~7.1.1"
-black = "~24.10.0"
-isort = "~5.13.2"
 pytest = "~8.3.3"
 pytest-cov = "~6.0.0"
 pytest-asyncio = "~0.24.0"
