--- a/pyproject.toml
+++ b/pyproject.toml
@@ -46,6 +46,15 @@ isort = "~5.13.2"
 requests = "^2.32.3"
 libcst = "^1.5.0"
 litellm = "^1.52.12"
+boto3 = {version = "^1.35.70", optional = true}
+chromadb = {version = "^0.5.20", optional = true}
+pdfplumber = {version = "^0.11.4", optional = true}
+beautifulsoup4 = "^4.12.3"
+
+[tool.poetry.extras]
+# poetry install -E aws -E rag
+aws = ["boto3"]
+rag = ["chromadb", "pdfplumber"]
 
 [tool.poetry.dev-dependencies]
 flake8 = "~7.1.1"
