--- a/pyproject.toml
+++ b/pyproject.toml
@@ -50,6 +50,7 @@ boto3 = {version = "^1.35.70", optional = true}
 chromadb = {version = "^0.5.20", optional = true}
 pdfplumber = {version = "^0.11.4", optional = true}
 beautifulsoup4 = "^4.12.3"
+fastapi = {extras = ["standard"], version = "^0.115.5"}
 
 [tool.poetry.extras]
 # poetry install -E aws -E rag
