--- a/.github/workflows/_zrb.yml
+++ b/.github/workflows/_zrb.yml
@@ -17,7 +17,7 @@ jobs:
   Run-command:
     runs-on: ubuntu-latest
     container:
-      image: stalchmst/zrb:0.23.2
+      image: stalchmst/zrb:1.0.0a16
     steps:
       - name: Check out repository code
         uses: actions/checkout@v3
@@ -34,8 +34,6 @@ jobs:
         shell: bash
         run: |
           set -e
-          export ZRB_ENV=${{ inputs.environment }}
-          export ZRB_SHOW_PROMPT=false
           echo "🏁 Install project dependencies"
           poetry config virtualenvs.create false --local
           poetry install
