--- a/pyproject.toml
+++ b/pyproject.toml
@@ -56,11 +56,12 @@ python-jose = {extras = ["cryptography"], version = "^3.3.0"}
 rag = ["chromadb", "pdfplumber"]
 
 [tool.poetry.dev-dependencies]
+alembic = "^1.14.0" # FastApp dependencies
 flake8 = "~7.1.1"
 pytest = "~8.3.3"
 pytest-cov = "~6.0.0"
 pytest-asyncio = "~0.24.0"
-sqlmodel = "^0.0.22"
+sqlmodel = "^0.0.22" # FastApp dependencies
 tomlkit = "^0.13.2"
 
 [tool.pytest.ini_options]
