--- a/pyproject.toml
+++ b/pyproject.toml
@@ -63,6 +63,7 @@ pytest-cov = "~6.0.0"
 pytest-asyncio = "~0.24.0"
 sqlmodel = "^0.0.22" # FastApp dependencies
 tomlkit = "^0.13.2"
+ulid = "^1.1" # FastApp dependencies
 
 [tool.pytest.ini_options]
 asyncio_default_fixture_loop_scope = "function"
