--- a/pyproject.toml
+++ b/pyproject.toml
@@ -50,6 +50,7 @@ pdfplumber = {version = "^0.11.4", optional = true}
 beautifulsoup4 = "^4.12.3"
 fastapi = {extras = ["standard"], version = "^0.115.6"}
 python-jose = {extras = ["cryptography"], version = "^3.3.0"}
+ulid-py = "^1.1.0"
 
 [tool.poetry.extras]
 # poetry install -E rag
@@ -63,7 +64,6 @@ pytest-cov = "~6.0.0"
 pytest-asyncio = "~0.24.0"
 sqlmodel = "^0.0.22" # FastApp dependencies
 tomlkit = "^0.13.2"
-ulid = "^1.1" # FastApp dependencies
 
 [tool.pytest.ini_options]
 asyncio_default_fixture_loop_scope = "function"
