--- a/pyproject.toml
+++ b/pyproject.toml
@@ -51,7 +51,7 @@ fastapi = {extras = ["standard"], version = "^0.115.6"}
 python-jose = {extras = ["cryptography"], version = "^3.3.0"}
 ulid-py = "^1.1.0"
 pydantic-ai = "^0.0.19"
-litellm = "^1.59.0"
+fastembed = "^0.5.1"
 
 [tool.poetry.extras]
 # poetry install -E rag
