--- a/pyproject.toml
+++ b/pyproject.toml
@@ -58,7 +58,7 @@ psutil = "^6.1.1"
 # poetry install -E rag
 rag = ["chromadb", "pdfplumber"]
 
-[tool.poetry.dev-dependencies]
+[tool.poetry.group.dev.dependencies]
 alembic = "^1.14.0" # FastApp dependencies
 flake8 = "~7.1.1"
 pytest = "~8.3.3"
