--- a/src/zrb/builtin/project/add/fastapp/fastapp_template/my_app_name/requirements.txt
+++ b/src/zrb/builtin/project/add/fastapp/fastapp_template/my_app_name/requirements.txt
@@ -5,3 +5,8 @@ ulid-py~=1.1.0
 passlib~=1.7.4
 Jinja2~=3.1.5
 python-jose~=3.3.0
+passlib~=1.7.4
+
+pytest~=8.3.4
+pytest-asyncio~=0.24.0
+pytest-cov~=6.0.0
