--- a/pyproject.toml
+++ b/pyproject.toml
@@ -52,7 +52,7 @@ python-jose = {extras = ["cryptography"], version = "^3.4.0"}
 ulid-py = "^1.1.0"
 pydantic-ai = "^0.0.42"
 fastembed = "^0.5.1"
-openai = "^1.10.0"
+openai = {version = "^1.10.0", optional = true}
 playwright = "^1.43.0"
 psutil = "^6.1.1"
 
