--- a/pyproject.toml
+++ b/pyproject.toml
@@ -53,12 +53,13 @@ ulid-py = "^1.1.0"
 pydantic-ai = "^0.0.42"
 fastembed = "^0.5.1"
 openai = {version = "^1.10.0", optional = true}
-playwright = "^1.43.0"
+playwright = {version = "^1.43.0", optional = true}
 psutil = "^6.1.1"
 
 [tool.poetry.extras]
 # poetry install -E rag
 rag = ["chromadb", "pdfplumber", "openai"]
+playwright = ["playwright"]
 
 [tool.poetry.group.dev.dependencies]
 alembic = "^1.14.0" # FastApp dependencies
