--- a/pyproject.toml
+++ b/pyproject.toml
@@ -1,6 +1,6 @@
 [tool.poetry]
 name = "zrb"
-version = "1.5.15"
+version = "1.5.16"
 description = "Your Automation Powerhouse"
 authors = ["Go Frendi Gunawan <gofrendiasgard@gmail.com>"]
 license = "AGPL-3.0-or-later"
@@ -53,6 +53,7 @@ pydantic-ai = "^0.1.6"
 openai = {version = "^1.76.0", optional = true}
 playwright = {version = "^1.51.0", optional = true}
 psutil = "^7.0.0"
+pyjwt = "^2.10.1"
 
 [tool.poetry.extras]
 # poetry install -E rag
