--- a/pyproject.toml
+++ b/pyproject.toml
@@ -50,6 +50,7 @@ fastapi = {extras = ["standard"], version = "^0.115.12"}
 python-jose = {extras = ["cryptography"], version = "^3.4.0"}
 ulid-py = "^1.1.0"
 pydantic-ai = "^0.2.18"
+tiktoken = "^0.8.0"
 openai = {version = "^1.76.0", optional = true}
 playwright = {version = "^1.51.0", optional = true}
 psutil = "^7.0.0"
