--- a/pyproject.toml
+++ b/pyproject.toml
@@ -55,6 +55,7 @@ openai = {version = "^1.86.0", optional = true}
 playwright = {version = "^1.53.0", optional = true}
 psutil = "^7.0.0"
 pyjwt = "^2.10.1"
+prompt-toolkit = "^3.0.51"
 
 [tool.poetry.extras]
 # poetry install -E rag
