--- a/pyproject.toml
+++ b/pyproject.toml
@@ -56,6 +56,7 @@ playwright = {version = "^1.53.0", optional = true}
 psutil = "^7.0.0"
 pyjwt = "^2.10.1"
 prompt-toolkit = "^3.0.51"
+rich = "^14.0.0"
 
 [tool.poetry.extras]
 # poetry install -E rag
